[build-system]
requires = [ "hatchling"]
build-backend = "hatchling.build"

[project]
name = "nbmask"
version = "0.0.4"
readme = "README.md"
requires-python = ">=3.8"
description = "IPython extension to mask sensitive data"
urls = { homepage = "https://github.com/furechan/nbmask" }
authors = [ { name = "furechan", email = "furechan@xsmail.com"} ]
keywords = ["ipython", "notebook", "extension", "privacy"]
optional-dependencies.dev = ["ipykernel"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[tool.pydev]
allow-publish = true 


[tool.hatch.build]
targets.wheel.sources = ["src"]
dev-mode-dirs = ["src"]
only-include = ["src"]
exclude = [".*"]
